--- a/package.json
+++ b/package.json
@@ -6,18 +6,34 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "next build; pm2 start npm --name 'king-maker' -- start"
+    "test": "next build; pm2 start npm --name 'king-maker' -- start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.20",
+    "babel-plugin-styled-components": "^2.0.2",
     "next": "12.0.8",
+    "prettier": "^2.5.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@storybook/addon-actions": "^6.4.12",
+    "@storybook/addon-essentials": "^6.4.12",
+    "@storybook/addon-links": "^6.4.12",
+    "@storybook/react": "^6.4.12",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "babel-loader": "^8.2.3",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
+    "eslint-plugin-storybook": "^0.5.5",
+    "react-docgen-typescript": "^2.2.2",
+    "storybook-addon-styled-component-theme": "^2.0.0",
     "typescript": "4.5.4"
   }
 }
