--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4"
   },
@@ -32,6 +33,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
     "eslint-plugin-storybook": "^0.5.5",
+    "fork-ts-checker-webpack-plugin": "^6.5.0",
     "react-docgen-typescript": "^2.2.2",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "typescript": "4.5.4"
