--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "king-maker",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "build-development": "env-cmd -f .env.dev next build",
+    "build-production": "env-cmd -f .env.prod next build",
+    "dev-deploy": "next test=development build",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.20",
     "babel-plugin-styled-components": "^2.0.2",
+    "env-cmd": "^10.1.0",
     "next": "12.0.8",
     "prettier": "^2.5.1",
     "react": "17.0.2",
