--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "king-maker",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "dev": "env-cmd -f .env.dev next dev",
     "build-development": "env-cmd -f .env.dev next build",
     "build-production": "env-cmd -f .env.prod next build",
     "dev-deploy": "next test=development build",
@@ -15,11 +17,12 @@
     "@types/styled-components": "^5.1.20",
     "babel-plugin-styled-components": "^2.0.2",
     "env-cmd": "^10.1.0",
+    "globby": "^12.2.0",
     "next": "12.0.8",
+    "node-fetch": "^3.2.0",
     "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4"
   },
