chore: path-alias 설정 및 적용
절대 경로 추가 및 적용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,15 @@
       ],
       "@styles/*": [
         "styles/*"
+      ],
+      "@api/*": [
+        "api/*"
+      ],
+      "@hooks/*": [
+        "hooks/*"
+      ],
+      "@types/*": [
+        "types/*"
       ]
     }
   },
