fix: type 정의 alias 경로 수정
node_modules와 겹치기 때문에 @types로 설정하면 안됨

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,8 +45,8 @@
       "@hooks/*": [
         "hooks/*"
       ],
-      "@types/*": [
-        "types/*"
+      "@models/*": [
+        "models/*"
       ]
     }
   },
