--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/chart.js": "^2.9.35",
     "@types/styled-components": "^5.1.20",
     "babel-plugin-styled-components": "^2.0.2",
+    "chart.js": "^3.7.0",
     "env-cmd": "^10.1.0",
     "globby": "^12.2.0",
     "next": "12.0.8",
     "node-fetch": "^3.2.0",
     "prettier": "^2.5.1",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4"
