--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
+    "react-day-picker": "^7.4.10",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4"
