--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/styled-components": "^5.1.20",
     "babel-plugin-styled-components": "^2.0.2",
     "chart.js": "^3.7.0",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "env-cmd": "^10.1.0",
     "globby": "^12.2.0",
     "next": "12.0.8",
