--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/chart.js": "^2.9.35",
     "@types/styled-components": "^5.1.20",
     "babel-plugin-styled-components": "^2.0.2",
