--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-styled-components": "^2.0.2",
     "chart.js": "^3.7.0",
     "chartjs-plugin-datalabels": "^2.0.0",
+    "date-fns": "^2.28.0",
     "env-cmd": "^10.1.0",
     "globby": "^12.2.0",
     "next": "12.0.8",
