--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@svgr/webpack": "^6.2.1",
     "@types/chart.js": "^2.9.35",
     "@types/styled-components": "^5.1.20",
+    "axios": "^0.26.0",
     "babel-plugin-styled-components": "^2.0.2",
     "chart.js": "^3.7.0",
     "chartjs-plugin-datalabels": "^2.0.0",
