--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-chartjs-2": "^4.0.1",
     "react-day-picker": "^7.4.10",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "react-query": "^3.34.16",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4"
