--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
     "react-query": "^3.34.16",
+    "recoil": "^0.6.1",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4"
   },
