--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "dev": "env-cmd -f .env.dev next dev",
     "build-development": "env-cmd -f .env.dev next build",
     "build-production": "env-cmd -f .env.prod next build",
-    "dev-deploy": "next test=development build",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "dev-deploy": "next test=development build"
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
@@ -38,20 +36,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
-    "@storybook/addon-actions": "^6.4.12",
-    "@storybook/addon-essentials": "^6.4.12",
-    "@storybook/addon-links": "^6.4.12",
-    "@storybook/react": "^6.4.12",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.2.3",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
-    "eslint-plugin-storybook": "^0.5.5",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
     "react-docgen-typescript": "^2.2.2",
-    "storybook-addon-styled-component-theme": "^2.0.0",
     "typescript": "4.5.4"
   }
 }
